--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<title>makegood</title>
+	<title>index</title>
 	<style>
 		html {
 			height:100%;
@@ -23,8 +23,8 @@
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="makegood_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="makegood.hyperesources/makegood_hype_generated_script.js?13636"></script>
+	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?56959"></script>
 	</div>
 
 	<!-- end copy -->
