--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, width=320" />
+	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, width=320" />
 
 	<!-- end copy -->
   </head>
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?70271"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?8335"></script>
 	</div>
 
 	<!-- end copy -->
