--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?28587"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?18915"></script>
 	</div>
 
 	<!-- end copy -->
@@ -56,6 +56,23 @@ Venta e instalación de cámaras de seguridad para hogar y negocio.
 Accesorios para celular: baterías, display, centro de carga, cargadores, micas de cristal y fundas.
 
 Cámara de video: instalación, venta y reparación de equipos de seguridad.
+</div>
+		<div>Make Good somos especialistas en la reparación de equipos de cómputo, celulares y tabletas.
+
+
+Contamos con Accesorios para su computadora, tableta o celulares.
+
+
+Venta e instalación de cámaras de seguridad para hogar y negocio.
+
+
+
+
+
+
+
+
+
 </div>
 
 	</div>
