--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?18637"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?37458"></script>
 	</div>
 
 	<!-- end copy -->
@@ -51,6 +51,7 @@ Venta e instalación de cámaras de seguridad para hogar y negocio.
 
 </div>
 		<div></div>
+		<div>Todos los derechos reservados 2022</div>
 		<div>Acceorios para Laptop: baterías, cargadores, display, disco duro, teclados, Memoria Ram.
 
 Accesorios para celular: baterías, display, centro de carga, cargadores, micas de cristal y fundas.
