--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?11845"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?49822"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,21 +35,11 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Make Good    Nos  dedicamos a la reparación de e quipos de computo tanto de escritorio como laptops.
-Contamos con Accesorios para su computadora, tableta o celulares.
-
-Venta e instalación de cámaras de seguridad para hogar y negocio.
-
-
-
-
-
-
-
-
-
-</div>
 		<div></div>
+		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. 
+
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
+</div>
 		<div>© Todos los derechos reservados 2022</div>
 		<div>Acceorios para Laptop: baterías, cargadores, display, disco duro, teclados, Memoria Ram.
 
@@ -57,13 +47,15 @@ Accesorios para celular: baterías, display, centro de carga, cargadores, micas 
 
 Cámara de video: instalación, venta y reparación de equipos de seguridad.
 </div>
-		<div>Make Good  Nos de dicamos a la reparación de equipos de cómputo tanto pc como laptops, celulares y tabletas.
-
+		<div>
 
 Contamos con Accesorios para su computadora, tableta o celulares.
 
-
 Venta e instalación de cámaras de seguridad para hogar y negocio.
+</div>
+		<div>Make Good  nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. 
+
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 
 
 
@@ -75,13 +67,8 @@ Venta e instalación de cámaras de seguridad para hogar y negocio.
 
 </div>
 		<div>© Todos los derechos reservados 2022</div>
-		<div>Make Good  Nos dedicamos a la reparación de equipos de cómputo tanto pc como laptops, celulares y tabletas.
-.
-
-Contamos con Accesorios para su computadora, tableta o celulares.
-
-Venta e instalación de cámaras de seguridad para hogar y negocio.
-
+		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas.
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 
 
 
