--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?98370"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?50592"></script>
 	</div>
 
 	<!-- end copy -->
@@ -36,9 +36,9 @@
 	<div style="display:none" aria-hidden=true>
 
 		<div></div>
-		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. 
+		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
-Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 </div>
 		<div>© Todos los derechos reservados 2022</div>
 		<div>Acceorios para Laptop: baterías, cargadores, display, disco duro, teclados, Memoria Ram.
@@ -53,11 +53,9 @@ Contamos con Accesorios para su computadora, tableta o celulares.
 
 Venta e instalación de cámaras de seguridad para hogar y negocio.
 </div>
-		<div>Make Good  nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. 
+		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
-Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
-
-
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 
 
 
@@ -67,8 +65,11 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, c
 
 </div>
 		<div>© Todos los derechos reservados 2022</div>
-		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas.
-Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
+		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
+
+Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
+
+
 
 
 
