--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?69074"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?33529"></script>
 	</div>
 
 	<!-- end copy -->
@@ -65,6 +65,8 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo,
 
 </div>
 		<div>© Todos los derechos reservados 2022</div>
+		<div>
+</div>
 		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
 Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
