--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, width=320" />
+	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, viewport-fit=cover" />
 
 	<!-- end copy -->
   </head>
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?33529"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?79684"></script>
 	</div>
 
 	<!-- end copy -->
@@ -41,17 +41,11 @@
 Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 </div>
 		<div>© Todos los derechos reservados 2022</div>
-		<div>Acceorios para Laptop: baterías, cargadores, display, disco duro, teclados, Memoria Ram.
-
-Accesorios para celular: baterías, display, centro de carga, cargadores, micas de cristal y fundas.
-
-Cámara de video: instalación, venta y reparación de equipos de seguridad.
-</div>
 		<div>
 
 Contamos con Accesorios para su computadora, tableta o celulares.
 
-Venta e instalación de cámaras de seguridad para hogar y negocio.
+
 </div>
 		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
@@ -63,9 +57,6 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo,
 
 
 
-</div>
-		<div>© Todos los derechos reservados 2022</div>
-		<div>
 </div>
 		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
@@ -81,6 +72,31 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, 
 
 
 </div>
+		<div>
+</div>
+		<div>© Todos los derechos reservados 2022</div>
+		<div>Accesorio para celular:
+
+baterías
+display
+ centro de carga
+cargadores
+micas
+ fundas</div>
+		<div>Refacciones para PC y Laptop
+
+baterías
+display y monitores
+disco duro y disco solido
+Teclado y mouse
+memoria ram
+fuetes de poder
+</div>
+		<div>Cámaras de video vigilancia
+
+Instalación 
+Venta y reparación de equipos de seguridad
+trabajamos con las marcas más confiables del mercado</div>
 
 	</div>
 
