--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 			height:100%;
 		}
 		body {
-			background-color:#61C3E5;
 			margin:0;
 			height:100%;
 		}
@@ -24,7 +23,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?79684"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?29209"></script>
 	</div>
 
 	<!-- end copy -->
@@ -75,6 +74,7 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, 
 		<div>
 </div>
 		<div>© Todos los derechos reservados 2022</div>
+		<div>Inicio</div>
 		<div>Accesorio para celular:
 
 baterías
