--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			height:100%;
 		}
 		body {
+			background-color:#61C3E5;
 			margin:0;
 			height:100%;
 		}
@@ -23,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?3327"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?81002"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,7 +36,7 @@
 	<div style="display:none" aria-hidden=true>
 
 		<div></div>
-		<div>Make Good nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
+		<div>Make Good   nos dedicamos a la reparación y mantenimiento de computadoras, celulares y tabletas. Instalamos y reparamos equipos de seguridad de su oficina, trabajo o su hogar, cuidando de los mas valiosos.
 
 Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, con el cual usted quedará completamente satisfecho.
 </div>
@@ -75,6 +76,13 @@ Reparamos su equipo de una manera Profesional, garantizandole nuestro trabajo, 
 </div>
 		<div>© Todos los derechos reservados 2022</div>
 		<div>Inicio</div>
+		<div>Accesorio para celular:
+baterías
+display
+ centro de carga
+cargadores
+micas
+ fundas</div>
 		<div>Accesorio para celular:
 
 baterías
