--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?81002"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?61541"></script>
 	</div>
 
 	<!-- end copy -->
@@ -91,6 +91,14 @@ display
 cargadores
 micas
  fundas</div>
+		<div>Refacciones para PC y Laptop
+baterías
+display y monitores
+disco duro y disco solido
+Teclado y mouse
+memoria ram
+fuetes de poder
+</div>
 		<div>Refacciones para PC y Laptop
 
 baterías
